Custom Mandrill credential
Make the usage of the Mandrill Heroku add-on optionnal (as a result make the app deployable on an unverified Heroku account).

--- a/app.json
+++ b/app.json
@@ -5,13 +5,18 @@
   "repository": "https://github.com/cobyism/ghost-on-heroku",
   "success_url": "/ghost",
   "addons": [
-    "heroku-postgresql",
-    "mandrill"
+    "heroku-postgresql"
   ],
   "env": {
     "HEROKU_URL": {
       "description": "The URL of this Heroku app.",
       "value": "http://YOURAPPNAME.herokuapp.com"
+    },
+    "MANDRILL_USERNAME": {
+      "description": "The Mandrill username used by this app."
+    },
+    "MANDRILL_APIKEY": {
+      "description": "The Mandrill API key."
     }
   }
 }
